syntax = "proto3";
package stayking.icacallbacks;

import "gogoproto/gogo.proto";
import "stayking/icacallbacks/params.proto";
import "stayking/icacallbacks/callback_data.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/soohoio/stayking/v2/x/icacallbacks/types";

// GenesisState defines the icacallbacks module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  string port_id = 2;
  repeated CallbackData callback_data_list = 3 [ (gogoproto.nullable) = false ];
  // this line is used by starport scaffolding # genesis/proto/state
}
